--- a/celula-inicial.html
+++ b/celula-inicial.html
@@ -19,7 +19,7 @@
     <div class="wrapper">
         <nav class="navbar-default navbar-static-side shadow-sm">
             <ul class="nav-aside">
-                <li><a href="#" data-toggle="tooltip" data-placement="left" title="Inicio"><img src="img/hogar.png"
+                <li><a href="inicio.html" data-toggle="tooltip" data-placement="left" title="Inicio"><img src="img/hogar.png"
                             width="35" alt=""></a></li>
                 <li><a href="#" data-toggle="tooltip" data-placement="left" title="Iniciar Célula"><img
                             src="img/conversacion.png" width="35" alt=""></a></li>
@@ -85,8 +85,6 @@
         </div>
     </main>
 
-</body>
-
 
 <!-- Modal -->
 <div class="modal fade" id="form" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -126,8 +124,6 @@
         $('[data-toggle="tooltip"]').tooltip();
     });
 </script>
-
-<script src="js/email.js"></script>
 
 </body>
 
