--- a/celula-inicial.html
+++ b/celula-inicial.html
@@ -23,7 +23,7 @@
                             width="35" alt=""></a></li>
                 <li><a href="#" data-toggle="tooltip" data-placement="left" title="Iniciar Célula"><img
                             src="img/conversacion.png" width="35" alt=""></a></li>
-                <li><a href="#" data-toggle="tooltip" data-placement="left" title="Control de Células"><img
+                <li><a href="panel-control-celulas.html" data-toggle="tooltip" data-placement="left" title="Control de Células"><img
                             src="img/avatar.png" width="35" alt=""></a></li>
                 <li><a href="#" data-toggle="tooltip" data-placement="left" title="Configuraciones"><img
                             src="img/configuraciones.png" width="35" alt=""></a></li>
@@ -37,7 +37,7 @@
 
     <main class="page-wrapper">
         <div class="container-fluid">
-            <header class="fixed-top shadow"><span class="font-weight-bold">Iniciación de células</header>
+            <header class="fixed-top shadow"><span class="font-weight-bold">Iniciación de células</span></header>
             <div class="row pt-5">
                 <div class="col-lg-12">
                     <div class="form-container shadow-sm">
