se corrigio un span en celula-inicial

--- a/celula-inicial.html
+++ b/celula-inicial.html
@@ -37,7 +37,7 @@
 
     <main class="page-wrapper">
         <div class="container-fluid">
-            <header class="fixed-top shadow"><span class="font-weight-bold">Iniciación de células</header>
+            <header class="fixed-top shadow"><span class="font-weight-bold">Iniciación de células</span></header>
             <div class="row pt-5">
                 <div class="col-lg-12">
                     <div class="form-container shadow-sm">
