--- a/panel-control.html
+++ b/panel-control.html
@@ -55,7 +55,7 @@
                         <p>Líder transición: <br> Josué Soria</p>
                     </div>
                     <div class="col-md-4 mt-4 mt-md-0">
-                        <p>Fecha de inicio de proceso de creación: 09/07/2021</p>
+                        <p>Fecha de inicio de proceso de creación: <br> 09/07/2021</p>
                     </div>
                 </div>
             <div class="row pt-4">
@@ -127,9 +127,12 @@
                                 <div class="col-md-4 mt-4 mt-md-0">
                                     <label for="mision">Detalle de cargo</label>
                                     <div class="row justify-content-start ml-2">
-                                        <a href="#"><img id="img-icon" class="mr-3" src="img/icono-pdf.svg" width="50" height="50"></a>
-                                        <a href="#" data-toggle="modal"
-                                        data-target="#correcto"><img id="img-icon" src="img/icono-pdf.svg" width="50" height="50"></a>
+                                        <a href="#" data-toggle="modal" data-target="#correcto">
+                                            <img id="img-icon" class="mr-3" src="img/icono-pdf.svg" width="50" height="50">
+                                        </a>
+                                        <a href="#" data-toggle="modal" data-target="#desc-cargo">
+                                            <img id="img-icon" src="img/icono-pdf.svg" width="50" height="50">
+                                        </a>
                                     </div>
                                     
                                 </div>
@@ -142,6 +145,7 @@
         </div>
     </main>
 
+<!--INICIAN MODALES VISTA PANEL DE CONTROL-->
 
 <!-- Modal error -->
 <div class="modal fade" id="form" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -207,6 +211,50 @@
 </div>
 <!-- Termia Modal -->
 
+<!-- Modal desactivar cargo -->
+<div class="modal fade" id="desc-cargo" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered ">
+        <div class="modal-content">
+            <div class="modal-header bg-dark d-flex justify-content-center border-0">
+                <h5 class="modal-title font-weight-bold text-white" id="exampleModalLabel">Desactivar cargo</h5>
+                <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button> -->
+            </div>
+            <div class="modal-body">
+                <p class="text-center">¿Realmente desea desactivar el cargo?</p>
+                <div class="row justify-content-center">
+                    <button class="btn btn-warning" type="button">SI</button>
+                    <button class="btn btn-cancel" type="button">NO</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Termia Modal -->
+
+<!-- Modal Cargo desactivado correctamente-->
+<div class="modal fade" id="desc-cargo-correcto" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered ">
+        <div class="modal-content">
+            <div class="modal-header bg-dark d-flex justify-content-center border-0">
+                <h5 class="modal-title font-weight-bold text-white" id="exampleModalLabel">Cargo desactivado correctamente.</h5>
+                <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button> -->
+            </div>
+            <div class="modal-body">
+                <p class="text-center">El usuario que estaba asignado a este cargo 
+                    ha cambiado su estatus a 'disponible'.</p>
+                <div class="row justify-content-center">
+                    <button class="btn btn-warning" type="button">OK</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Termia Modal -->
+
 <!-- Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
@@ -217,6 +265,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
 </script>
+
 <!-- Tootltips -->
 <script>
     $(document).ready(function () {
