--- a/personas.html
+++ b/personas.html
@@ -39,8 +39,7 @@
         <div class="container-fluid">
             <header class="fixed-top shadow d-flex justify-content-between">
                 <span class="font-weight-bold">Personas</span>
-                <button class="btn btn-warning mr-sm-5 mr-3 " type="button" data-toggle="modal"
-                    data-target="#panelCelulamodal">Agregar persona +</button>
+                <a href="nueva-persona.html" class="btn btn-warning mr-sm-5 mr-3 ">Agregar persona +</a>
             </header>
             <div class="row">
 
@@ -75,7 +74,7 @@
                                    <td ><button type="button" class="btn-modify ml-5" id="download"><img src="img/download.svg" height="30" alt=""></button></td>
                                    <td>01/07/2003</td>
                                    <td class="d-flex">
-                                       <a href="#"><img src="img/edit.svg" height="30" alt=""></a> 
+                                       <a href="editar-persona.html"><img src="img/edit.svg" height="30" alt=""></a> 
                                        <button type="button" class="btn-modify ml-5" id="delete"><img src="img/delete.svg" height="30" alt=""></button>
                                     </td>
                                </tr>
@@ -90,7 +89,7 @@
                                     <td ><button type="button" class="btn-modify ml-5" id="download"><img src="img/download.svg" height="30" alt=""></button></td>
                                     <td>01/07/2003</td>
                                     <td class="d-flex">
-                                        <a href="#"><img src="img/edit.svg" height="30" alt=""></a> 
+                                        <a href="editar-persona.html"><img src="img/edit.svg" height="30" alt=""></a> 
                                         <button type="button" class="btn-modify ml-5" id="delete"><img src="img/delete.svg" height="30" alt=""></button>
                                      </td>
                                 </tr>
@@ -105,7 +104,7 @@
                                 <td ><button type="button" class="btn-modify ml-5" id="download"><img src="img/download.svg" height="30" alt=""></button></td>
                                 <td>01/07/2003</td>
                                 <td class="d-flex">
-                                    <a href="#"><img src="img/edit.svg" height="30" alt=""></a> 
+                                    <a href="editar-persona.html"><img src="img/edit.svg" height="30" alt=""></a> 
                                     <button type="button" class="btn-modify ml-5" id="delete"><img src="img/delete.svg" height="30" alt=""></button>
                                  </td>
                             </tr>
