Se realizaron ajustes en carpetas admin y en user

--- a/panel-control-celulas.html
+++ b/panel-control-celulas.html
@@ -41,7 +41,7 @@
                 <span class="font-weight-bold d-md-block d-none">Bienvenido al panel de control de la célula DevOps.</span>
                 <span class="font-weight-bold d-md-none d-block ml-5 pl-5">Panel de célula</span>
                 <button class="btn btn-warning mr-sm-5 mr-3 " type="button" data-toggle="modal"
-                    data-target="#panelCelulamodal">Finalizar </button></header>
+                    data-target="#panelCelulamodal">Guardar </button></header>
             <div class="row">
 
                 <div class="col-12 d-flex flex-sm-row flex-column align-items-center mt-4 mt-sm0">
@@ -50,7 +50,7 @@
                         <input class="form-control c-pcontrol rounded-pill" type="text" placeholder="2">
                     </form>
                     <sapan class="ml-3 font-weight-bold">Min 2 : Max 10</sapan>
-                    <button class="btn btn-warning ml-sm-4 mt-3 mt-sm-0" type="button" id="panelCelula">Finalizar
+                    <button class="btn btn-warning ml-sm-4 mt-3 mt-sm-0" type="button" id="panelCelula">Agregar
                     </button>
                 </div>
             </div>
