--- a/user/user-index.html
+++ b/user/user-index.html
@@ -20,7 +20,7 @@
         <nav class="navbar-default navbar-static-side shadow-sm">
             <ul class="nav-aside">
                 <li>
-                    <a href="inicio.html" data-toggle="tooltip" data-placement="left" title="Inicio">
+                    <a href="user-index.html" data-toggle="tooltip" data-placement="left" title="Inicio">
                         <img src="../img/hogar.png"width="35" alt="">
                     </a>
                 </li>
