--- a/admin/tabla-admin.html
+++ b/admin/tabla-admin.html
@@ -40,10 +40,14 @@
             <header class="fixed-top shadow d-flex flex-row justify-content-between">
                 <span class="font-weight-bold">Personas</span>
             </header>
-            <h4>total de personas: 260</h4>
+            <div class="row">
+                <div class="col-12 d-flex flex-sm-row flex-column align-items-center mt-4 mt-sm0">
+                    <p>Total de personas: <strong>260</strong> </p>
+                </div>
+            </div>
             <div class="row pt-5">
-                <div class="col-lg-12">
-                    <table class="table">
+                <div class="table-responsive b-radius shadow-sm">
+                    <table class="table table-striped">
                         <thead class="thead-dark">
                           <tr>
                             <th scope="col">Solicitante</th>
@@ -61,7 +65,7 @@
                             <td>P.O</td>
                             <td>01/07/2003</td>
                             <td>Alta de cargos</td>
-                            <td><a href="../admin/auto-admin.html" class="btn btn-primary">Ver</a></td>
+                            <td><a href="../admin/auto-admin.html" class="btn btn-primary rounded-pill">Ver</a></td>
                           </tr>
                           <tr>
                             <th>Rodrigo Mailg</th>
@@ -69,7 +73,7 @@
                             <td>C.P.O</td>
                             <td>01/07/2003</td>
                             <td>Baja de cargos</td>
-                            <td><a href="#" class="btn btn-primary">Ver</a></td>
+                            <td><a href="#" class="btn btn-primary rounded-pill">Ver</a></td>
                           </tr>
                         </tbody>
                       </table>
