Se realizaron ajustes en vistas y en rama jmadrid

--- a/editar-persona.html
+++ b/editar-persona.html
@@ -115,7 +115,7 @@
                             
                             <div class="row mt-3">
                                 <div class="col-12 mt-3 mb-3">
-                                    <sapan class="font-weight-bold my-3">Datos y documentos </sapan>
+                                    <sapan class="font-weight-bold my-3">Información curricular </sapan>
                                 </div>
                                 <div class="col-md-4 col-sm-6 ">
                                     <label class="" for="lider-transicion">Conocimientos:</label>
@@ -136,6 +136,33 @@
                                 <div class="col-md-4 pt-3 pt-sm-0">
                                     <label for="nombre">Habilidades:</label>
                                     <input type="text" nombre class="form-control rounded-pill">
+                                </div>
+                            </div>
+
+                            <div class="row mt-3">
+                                <div class="col-12 mt-3 mb-3">
+                                    <sapan class="font-weight-bold my-3">Historial de cargos </sapan>
+                                </div>
+                                <div class="col-md-6">
+                                    <ul>
+                                        <li>Desarrollo de Software: 28/08/2017 - 28/08/2021 </li>
+                                        <li>Lider de equipo: 28/08/2021</li>
+                                    </ul>
+                                </div>
+                                <div class="col-md-3">
+                                    <input class="form-check-input" type="checkbox" value="option1">
+                                        <label class="form-check-label" for="inlineCheckbox1">Capacidad de contratar y
+                                            despedir personal
+                                        </label>
+                                </div>
+
+                                <div class="col-md-3 d-flex flex-column align-items-center justify-content-center">
+                                    Contrato de trabajo
+                                        <div class="mt-2">
+                                            <a href="" data-toggle="modal" data-target="#correcto">
+                                                <img src="img/icono-pdf.svg" class="p-2 img-icon" alt="">
+                                            </a>
+                                        </div>
                                 </div>
                             </div>
                         </form>
