--- a/personas.html
+++ b/personas.html
@@ -70,11 +70,11 @@
                                    <td>Disponible</td>
                                    <td>Disponible</td>
                                    <td>7.811.479-7</td>
-                                   <td ><button type="button" class="btn-modify ml-5" id="download"><img src="img/download.svg" height="30" alt=""></button></td>
+                                   <td ><button type="button" class="btn-modify ml-5 img-icon" id="download"><img src="img/download.svg" height="30" alt=""></button></td>
                                    <td>01/07/2003</td>
                                    <td class="d-flex">
-                                       <a href="editar-persona.html"><img src="img/edit.svg" height="30" alt=""></a> 
-                                       <button type="button" class="btn-modify ml-5" id="delete"><img src="img/delete.svg" height="30" alt=""></button>
+                                       <a href="editar-persona.html"><img src="img/edit.svg" class="img-icon" height="30" alt=""></a> 
+                                       <button type="button" class="btn-modify ml-5 img-icon" id="delete"><img src="img/delete.svg" height="30" alt=""></button>
                                     </td>
                                </tr>
                                <!-- Filas -->
@@ -85,11 +85,11 @@
                                     <td>Disponible</td>
                                     <td>Disponible</td>
                                     <td>7.811.479-7</td>
-                                    <td ><button type="button" class="btn-modify ml-5" id="download"><img src="img/download.svg" height="30" alt=""></button></td>
+                                    <td ><button type="button" class="btn-modify ml-5 img-icon" id="download"><img src="img/download.svg" height="30" alt=""></button></td>
                                     <td>01/07/2003</td>
                                     <td class="d-flex">
-                                        <a href="editar-persona.html"><img src="img/edit.svg" height="30" alt=""></a> 
-                                        <button type="button" class="btn-modify ml-5" id="delete"><img src="img/delete.svg" height="30" alt=""></button>
+                                        <a href="editar-persona.html"><img src="img/edit.svg" class="img-icon" height="30" alt=""></a> 
+                                        <button type="button" class="btn-modify ml-5 img-icon" id="delete"><img src="img/delete.svg" height="30" alt=""></button>
                                      </td>
                                 </tr>
                                 <!-- Filas -->
@@ -100,11 +100,11 @@
                                 <td>Disponible</td>
                                 <td>Disponible</td>
                                 <td>7.811.479-7</td>
-                                <td ><button type="button" class="btn-modify ml-5" id="download"><img src="img/download.svg" height="30" alt=""></button></td>
+                                <td ><button type="button" class="btn-modify ml-5 img-icon" id="download"><img src="img/download.svg" height="30" alt=""></button></td>
                                 <td>01/07/2003</td>
                                 <td class="d-flex">
-                                    <a href="editar-persona.html"><img src="img/edit.svg" height="30" alt=""></a> 
-                                    <button type="button" class="btn-modify ml-5" id="delete"><img src="img/delete.svg" height="30" alt=""></button>
+                                    <a href="editar-persona.html"><img src="img/edit.svg" class="img-icon" height="30" alt=""></a> 
+                                    <button type="button" class="btn-modify ml-5 img-icon" id="delete"><img src="img/delete.svg" height="30" alt=""></button>
                                  </td>
                             </tr>
                             <!-- Filas -->
