--- a/celula-inicial.html
+++ b/celula-inicial.html
@@ -19,14 +19,14 @@
     <div class="wrapper">
         <nav class="navbar-default navbar-static-side shadow-sm">
             <ul class="nav-aside">
-                <li><a href="inicio.html" data-toggle="tooltip" data-placement="left" title="Inicio"><img src="img/hogar.png"
-                            width="35" alt=""></a></li>
+                <li><a href="inicio.html" data-toggle="tooltip" data-placement="left" title="Inicio"><img
+                            src="img/hogar.png" width="35" alt=""></a></li>
                 <li><a href="#" data-toggle="tooltip" data-placement="left" title="Iniciar Célula"><img
                             src="img/conversacion.png" width="35" alt=""></a></li>
-                <li><a href="panel-control-celulas.html" data-toggle="tooltip" data-placement="left" title="Control de Células"><img
-                            src="img/avatar.png" width="35" alt=""></a></li>
-                <li><a href="panel-control.html" data-toggle="tooltip" data-placement="left" title="Configuraciones"><img
-                            src="img/configuraciones.png" width="35" alt=""></a></li>
+                <li><a href="panel-control-celulas.html" data-toggle="tooltip" data-placement="left"
+                        title="Control de Células"><img src="img/avatar.png" width="35" alt=""></a></li>
+                <li><a href="panel-control.html" data-toggle="tooltip" data-placement="left"
+                        title="Configuraciones"><img src="img/configuraciones.png" width="35" alt=""></a></li>
                 <li><a href="personas.html" data-toggle="tooltip" data-placement="left" title="Nueva persona"><img
                             src="img/usuarios.png" width="35" alt=""></a></li>
                 <li><a href="#" data-toggle="tooltip" data-placement="left" title="Salir"><img src="img/salir.svg"
@@ -37,7 +37,12 @@
 
     <main class="page-wrapper">
         <div class="container-fluid">
-            <header class="fixed-top shadow"><span class="font-weight-bold">Iniciación de células</span></header>
+            <header class="fixed-top shadow d-flex flex-row justify-content-between">
+                <span class="font-weight-bold d-none d-md-block">Bienvenido al panel de control de Célula</span>
+                <span class="font-weight-bold d-block d-md-none">Inicio de Célula</span>
+                <a href="panel-control-celulas.html" class="mr-5 btn btn-warning">Cargos
+                </a>
+            </header>
             <div class="row pt-5">
                 <div class="col-lg-12">
                     <div class="form-container shadow-sm">
@@ -66,64 +71,123 @@
                                     <textarea class="form-control rounded-pill" required name="mision"
                                         rows="3"></textarea>
                                 </div>
-                                <div class="col-md-6 d-flex flex-row align-items-center pl-5 mt-4 mt-md-0">
-                                    <input class="form-check-input" type="checkbox" value="option1">
-                                    <label class="form-check-label" for="inlineCheckbox1">Permiso para crear
-                                        células</label>
+                                <div class="col-md-6 d-flex flex-column justify-content-center pl-5 mt-4 mt-md-0">
+                                    <div>
+                                        <input class="form-check-input" type="checkbox" value="option1">
+                                        <label class="form-check-label" for="inlineCheckbox1">Contacto con cliente
+                                        </label>
+                                    </div>
+
+                                    <div class="pt-3">
+                                        <input class="form-check-input" type="checkbox" value="option1">
+                                        <label class="form-check-label" for="inlineCheckbox1">Permiso para crear
+                                            células
+                                        </label>
+                                    </div>
+
+
                                 </div>
                             </div>
                         </form>
 
                         <div class="d-flex justify-content-md-end justify-content-center mt-2 mb-4 mr-md-4 pill">
                             <button class="btn btn-warning" type="button" data-toggle="modal"
-                                data-target="#form">Finalizar </button>
+                                data-target="#form">Editar </button>
                         </div>
                     </div>
                 </div>
 
             </div>
+
+            <!-- Acuerdos -->
+            <div class="row pt-5">
+                <div class="col-lg-12">
+                    <div class="form-container shadow-sm">
+                        <div class="form-container__tile pl-4">
+                            Acuerdos
+                        </div>
+
+                        <form class="form-container__form p-4">
+                            <div class="row">
+                                <div class="col-md-1 col-sm-2 d-flex flex-sm-column flex-row align-items-center">
+                                  <strong>Acuerdo: </strong>
+                                    <span> #1</span>
+                                </div>
+                                <div class="col-md-5 col-sm-5 mt-3 mt-sm-0">
+                                    <label for="nombre">Acuerdo</label>
+                                    <input type="text" nombre class="form-control rounded-pill">
+                                </div>
+                                <div class="col-md-4 col-sm-5 mt-4 mt-sm-0">
+                                    <label for="lider-transicion">Celulas involucradas</label>
+                                    <select class="form-control rounded-pill">
+                                        <option>IT</option>
+                                        <option>Dirección</option>
+                                        <option>Desarrollo</option>
+                                    </select>
+                                </div>
+                                <div class="col-md-2 text-center mt-3 mt-md-0">
+                                    Documentos
+                                    <div class="mt-2">
+                                        <a href="" data-toggle="modal" data-target="#correcto">
+                                            <img src="img/icono-pdf.svg" class="p-2 img-icon" alt="">
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+
+                        <div class="d-flex justify-content-md-end justify-content-center mt-1 mb-4 mr-md-4 pill">
+                            <button class="btn btn-primary rounded-pill" type="button">Guardar </button>
+                            <button class="btn btn-warning ml-3" type="button">Agregar </button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <!-- Termina Acuerdos -->
         </div>
     </main>
 
 
-<!-- Modal -->
-<div class="modal fade" id="form" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered ">
-        <div class="modal-content">
-            <div class="modal-header bg-dark d-flex justify-content-center border-0">
-                <h5 class="modal-title font-weight-bold text-white" id="exampleModalLabel">¡Bien hecho!</h5>
-                <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+    <!-- Modal -->
+    <div class="modal fade" id="form" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered ">
+            <div class="modal-content">
+                <div class="modal-header bg-dark d-flex justify-content-center border-0">
+                    <h5 class="modal-title font-weight-bold text-white" id="exampleModalLabel">¡Bien hecho!</h5>
+                    <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button> -->
-            </div>
-            <div class="modal-body">
-                <p class="text-center">La creación de la célula <br>
-                    ha sido iniciada con éxito</p>
-                <div class="row justify-content-center">
-                    <i class="far fa-check-circle fa-check-circle__check"></i>
+                </div>
+                <div class="modal-body">
+                    <p class="text-center">La creación de la célula <br>
+                        ha sido iniciada con éxito</p>
+                    <div class="row justify-content-center">
+                        <i class="far fa-check-circle fa-check-circle__check"></i>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<!-- Termia Modal -->
+    <!-- Termia Modal -->
 
-<!-- Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous">
-</script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
-</script>
-<!-- Tootltips -->
-<script>
-    $(document).ready(function () {
-        $('[data-toggle="tooltip"]').tooltip();
-    });
-</script>
+    <!-- Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
+    </script>
+    <!-- Tootltips -->
+    <script>
+        $(document).ready(function () {
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+
+    </script>
 
 </body>
 
