--- a/nueva-persona.html
+++ b/nueva-persona.html
@@ -132,6 +132,15 @@
                                     <input type="text" nombre class="form-control rounded-pill">
                                 </div>
                             </div>
+
+                            <div class="row mt-4">
+                                <div class="col-md-3 ml-3">
+                                    <input class="form-check-input" type="checkbox" value="option1">
+                                        <label class="form-check-label" for="inlineCheckbox1">Capacidad de contratar y
+                                            despedir personal
+                                        </label>
+                                </div>
+                            </div>
                         </form>
                     </div>
                 </div>
