--- a/panel-control-celulas.html
+++ b/panel-control-celulas.html
@@ -38,8 +38,8 @@
     <main class="page-wrapper">
         <div class="container-fluid">
             <header class="fixed-top shadow d-flex justify-content-between">
-                <span class="font-weight-bold d-md-block d-none">Bienvenido al panel de control de la célula DevOps.</span>
-                <span class="font-weight-bold d-md-none d-block ml-5 pl-5">Panel de célula</span>
+                <span class="font-weight-bold d-md-block d-none">Panel de control de Célula - Cargos</span>
+                <span class="font-weight-bold d-md-none d-block ml-5 pl-5">Cargos célula</span>
                 <button class="btn btn-warning mr-sm-5 mr-3 " type="button" data-toggle="modal"
                     data-target="#panelCelulamodal">Guardar </button></header>
             <div class="row">
@@ -50,7 +50,7 @@
                         <input class="form-control c-pcontrol rounded-pill" type="text" placeholder="2">
                     </form>
                     <sapan class="ml-3 font-weight-bold">Min 2 : Max 10</sapan>
-                    <button class="btn btn-warning ml-sm-4 mt-3 mt-sm-0" type="button" id="panelCelula">Agregar
+                    <button class="btn btn-warning ml-sm-4 mt-3 mt-sm-0" type="button" id="panelCelula">Generar
                     </button>
                 </div>
             </div>
@@ -88,13 +88,21 @@
                                 </div>
 
                                 <div class="col-md-4 mt-4 mt-md-0">
-                                    <label for="lider-transicion">Salario:</label>
-                                    <select class="form-control rounded-pill">
-                                        <option>Tipo B México</option>
-                                        <option>Tipo B Chile</option>
-                                    </select>
+                                    <div>
+                                        <label for="lider-transicion">Salario:</label>
+                                        <select class="form-control rounded-pill">
+                                            <option>Tipo B México</option>
+                                            <option>Tipo B Chile</option>
+                                        </select>
+                                    </div>
+                                    
+                                    <div class="pt-4 ml-4">
+                                        <input class="form-check-input" type="checkbox" value="option1">
+                                        <label class="form-check-label" for="inlineCheckbox1">Capacidad de contratar y despedir personal
+                                        </label>
+                                    </div>
 
-                                    <div class="mt-3">
+                                    <div class="mt-4 ml-1">
                                         Detalle de cargo
                                         <div class="mt-2">
                                             <img src="img/icono-pdf.svg" class="p-2" alt="">
@@ -111,8 +119,8 @@
             </div>
             <!-- Termina Creación de Row de Formulario -->
 
-             <!-- Creación de Row de Formulario -->
-             <div class="row pt-sm-5 pt-3" id="rowForm2">
+            <!-- Creación de Row de Formulario -->
+            <div class="row pt-sm-5 pt-3" id="rowForm2">
                 <div class="col-lg-12">
                     <div class="form-container shadow-sm" id="numCargo2">
                         <form class="form-container__form p-5">
@@ -144,13 +152,21 @@
                                 </div>
 
                                 <div class="col-md-4 mt-4 mt-md-0">
-                                    <label for="lider-transicion">Salario:</label>
-                                    <select class="form-control rounded-pill">
-                                        <option>Tipo B México</option>
-                                        <option>Tipo B Chile</option>
-                                    </select>
+                                    <div>
+                                        <label for="lider-transicion">Salario:</label>
+                                        <select class="form-control rounded-pill">
+                                            <option>Tipo B México</option>
+                                            <option>Tipo B Chile</option>
+                                        </select>
+                                    </div>
+                                    
+                                    <div class="pt-4 ml-4">
+                                        <input class="form-check-input" type="checkbox" value="option1">
+                                        <label class="form-check-label" for="inlineCheckbox1">Capacidad de contratar y despedir personal
+                                        </label>
+                                    </div>
 
-                                    <div class="mt-3">
+                                    <div class="mt-4 ml-1">
                                         Detalle de cargo
                                         <div class="mt-2">
                                             <img src="img/icono-pdf.svg" class="p-2" alt="">
