--- a/admin/auto-admin.html
+++ b/admin/auto-admin.html
@@ -17,7 +17,7 @@
 <body>
 
     <div class="wrapper">
-        <nav class="navbar-default navbar-static-side shadow-sm">
+        <nav class="navbar-default navbar-static-side-admin shadow-sm">
             <ul class="nav-aside">
                 <li>
                     <a href="inicio.html" data-toggle="tooltip" data-placement="left" title="Inicio">
@@ -64,7 +64,7 @@
                 <span class="font-weight-bold">Autorizaciones</span>
                 <a class="mr-5" href="../admin/tabla-admin.html"> <img src="../img/arrow.svg" width="35" alt="Regresar"></a>
             </header>
-            <h4>Cargos de DevOps</h4>
+            <p>Cargos de DevOps</p>
             <div class="row pt-5">
                 <div class="col-lg-12">
                     <div class="row">
