--- a/admin/tabla-admin.html
+++ b/admin/tabla-admin.html
@@ -17,7 +17,7 @@
 <body>
 
     <div class="wrapper">
-        <nav class="navbar-default navbar-static-side shadow-sm">
+        <nav class="navbar-default navbar-static-side-admin shadow-sm">
             <ul class="nav-aside">
                 <li><a href="inicio.html" data-toggle="tooltip" data-placement="left" title="Inicio"><img src="../img/hogar.png"
                             width="35" alt=""></a></li>
@@ -38,9 +38,9 @@
     <main class="page-wrapper">
         <div class="container-fluid">
             <header class="fixed-top shadow d-flex flex-row justify-content-between">
-                <span class="font-weight-bold">Personas</span>
+                <span class="font-weight-bold">Autorizaciones</span>
             </header>
-            <h4>total de personas: 260</h4>
+            <p>total: <strong>2</strong></p>
             <div class="row pt-5">
                 <div class="col-lg-12">
                     <table class="table">
